src/corelib/plugin/quuid.cpp
@@ -578,10 +578,8 @@ QUuid QUuid::createUuid()
 QT_BEGIN_INCLUDE_NAMESPACE
 #include "qdatetime.h"
 #include "qfile.h"
-#include "stdlib.h" // For srand/rand
+#include "qthreadstorage.h"
 QT_END_INCLUDE_NAMESPACE
-
-extern void qsrand(); // in qglobal.cpp
 
 QUuid QUuid::createUuid()
 {
@@ -600,12 +598,24 @@ QUuid QUuid::createUuid()
         static const int intbits = sizeof(int)*8;
         static int randbits = 0;
         if (!randbits) {
+        int r = 0;
             int max = RAND_MAX;
-            do { ++randbits; } while ((max=max>>1));
+            do { ++r; } while ((max=max>>1));
+            randbits = r;
         }
 
-        // reseed, but only if not already seeded
-        qsrand();
+    static QThreadStorage<int *> uuidseed;
+    if (!uuidseed.hasLocalData()) {
+        // Seed the PRNG once per thread with a combination of current time, a
+        // stack address and a serial counter (since thread stack addresses are
+        // re-used).
+        int *pseed = new int;
+        static QBasicAtomicInt serial = Q_BASIC_ATOMIC_INITIALIZER(2);
+        qsrand(*pseed = QDateTime::currentDateTime().toTime_t()
+                        + quintptr(&pseed)
+                        + serial.fetchAndAddRelaxed(1));
+        uuidseed.setLocalData(pseed);
+    }
 
         int chunks = 16 / sizeof(uint);
         while (chunks--) {
